# ChangeLog for x11-terms/xterm
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.191 2006/12/06 21:14:55 kloeri Exp $

  06 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> xterm-222.ebuild:
  Stable on Alpha.

  03 Dec 2006; Christian Faulhammer <opfer@gentoo.org> xterm-222.ebuild:
  stable x86, bug #156741

  01 Dec 2006; Markus Rothe <corsair@gentoo.org> xterm-222.ebuild:
  Stable on ppc64; bug #156741

  01 Dec 2006; nixnut <nixnut@gentoo.org> xterm-222.ebuild:
  Stable on ppc wrt bug 156741

  01 Dec 2006; Steve Dibb <beandog@gentoo.org> xterm-222.ebuild:
  amd64 stable, bug 156741

  01 Dec 2006; Steve Dibb <beandog@gentoo.org> xterm-218.ebuild,
  xterm-222.ebuild, xterm-223.ebuild:
  Change dodoc to dohtml for html doc

  01 Dec 2006; Ferris McCormick <fmccor@gentoo.org> xterm-222.ebuild:
  Stable on sparc --- Bug #156741 --- it's been fine since late October, when it
  came out.

  01 Dec 2006; Jeroen Roovers <jer@gentoo.org> xterm-222.ebuild:
  Stable for HPPA (bug #156741).

*xterm-223 (01 Dec 2006)

  01 Dec 2006; Seemant Kulleen <seemant@gentoo.org> +xterm-223.ebuild:
  version bump, thanks to Thomas Dickey. It fixes bug #147111

  20 Oct 2006; Seemant Kulleen <seemant@gentoo.org> -xterm-220.ebuild,
  -xterm-221.ebuild:
  Removing xterm-220 and xterm-221 for segfault as shown in bug #152085 by
  Ciaran McCreesh

  19 Oct 2006; Aron Griffis <agriffis@gentoo.org> xterm-220.ebuild:
  Mark 220 stable on alpha

  18 Oct 2006; Joshua Jackson <tsunam@gentoo.org> xterm-220.ebuild:
  Stable x86; at seemant's request

  18 Oct 2006; Luca Barbato <lu_zero@gentoo.org> xterm-220.ebuild:
  Marked ppc

  18 Oct 2006; Tim Yamin <plasmaroo@gentoo.org> xterm-220.ebuild:
  Stable on IA64; bug #151762.

  18 Oct 2006; Seemant Kulleen <seemant@gentoo.org> xterm-220.ebuild:
  stabling arm, sh, s390 based on prior conversations with vapier about it
