@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX xterm-app-defaults-ref.patch 572 RMD160 c8f9acef7113e9e1ffa2987d51f9d03f50658116 SHA1 d80445dccc4a52bc22d118787929db937417ce50 SHA256 41616cb3a3dd687b9c5e1e60ff0e5ebfc6a116f3e0de89c86705235ecfc6203f
 MD5 307a0970129ebdd2044f781e24dd434e files/xterm-app-defaults-ref.patch 572
 RMD160 c8f9acef7113e9e1ffa2987d51f9d03f50658116 files/xterm-app-defaults-ref.patch 572
@@ -9,18 +12,18 @@ EBUILD xterm-218.ebuild 2750 RMD160 c14f69fb7bd62c0a50ae41727e1131fd4cd37711 SHA
 MD5 380a8c6928774ef4254b4840f4fc2a24 xterm-218.ebuild 2750
 RMD160 c14f69fb7bd62c0a50ae41727e1131fd4cd37711 xterm-218.ebuild 2750
 SHA256 5771d6a50643fa3f699008830fc810f567677925d53869c052de03ba7cbb8eab xterm-218.ebuild 2750
-EBUILD xterm-222.ebuild 2785 RMD160 f2fd8e0afb9e09413673ab9fff0311aaa850f853 SHA1 35718aa0e55190d503003434ed0631c0003e80a4 SHA256 209b195eb861acf7ec92250b79b3bafa2b61bd39953f6208d305649cb1f155c0
-MD5 b24cfbbce22340bbb274905b39d021d4 xterm-222.ebuild 2785
-RMD160 f2fd8e0afb9e09413673ab9fff0311aaa850f853 xterm-222.ebuild 2785
-SHA256 209b195eb861acf7ec92250b79b3bafa2b61bd39953f6208d305649cb1f155c0 xterm-222.ebuild 2785
+EBUILD xterm-222.ebuild 2783 RMD160 f471486af1df1c068159ca150314e921bfeda76f SHA1 1e32b4ec32fb66f5fc3dcdbd7b0a322f9a33d6f7 SHA256 26ec56bb8fbec70627293fa85b6466603049dcca4f9033e8ec4d8fdf6d650e0d
+MD5 c1b4b57abf2b0dcf87bbb9aa1fed8f3f xterm-222.ebuild 2783
+RMD160 f471486af1df1c068159ca150314e921bfeda76f xterm-222.ebuild 2783
+SHA256 26ec56bb8fbec70627293fa85b6466603049dcca4f9033e8ec4d8fdf6d650e0d xterm-222.ebuild 2783
 EBUILD xterm-223.ebuild 2796 RMD160 03d02451e1b73deadbca5026ad0b8a5cf750a51f SHA1 d60aa75ea7aa81c2b0b9bb4357baefa4bd3cd055 SHA256 3f1a7062bb18c922372de0d84f279a482921d35676b047bb47f3b9bb65fb90af
 MD5 631a184f1f2e10f1fc575547ab1cdea7 xterm-223.ebuild 2796
 RMD160 03d02451e1b73deadbca5026ad0b8a5cf750a51f xterm-223.ebuild 2796
 SHA256 3f1a7062bb18c922372de0d84f279a482921d35676b047bb47f3b9bb65fb90af xterm-223.ebuild 2796
-MISC ChangeLog 26873 RMD160 8776bb2164b643a641bd5f0d93319c34af351b65 SHA1 c4885c8e201dad848489287ee16fd81b24abe0ee SHA256 ee524a7e5a32334ce9bb5642f41b57703bc48a9ee8ae50454919ab9b147766dd
-MD5 658d1550cd2c73150ae2e7c5997d27f2 ChangeLog 26873
-RMD160 8776bb2164b643a641bd5f0d93319c34af351b65 ChangeLog 26873
-SHA256 ee524a7e5a32334ce9bb5642f41b57703bc48a9ee8ae50454919ab9b147766dd ChangeLog 26873
+MISC ChangeLog 26976 RMD160 a32d2a73586c593da9b5cf5ba4eccf142db40525 SHA1 311a6400c72659ebc826cdbe6dd1908364cb6848 SHA256 bbcb698d2fcb6f69222c353b7f5c53a32944b367c1d16329189f0a521dfd0f4b
+MD5 1c9a4013af0cf00341c2e97703042f8f ChangeLog 26976
+RMD160 a32d2a73586c593da9b5cf5ba4eccf142db40525 ChangeLog 26976
+SHA256 bbcb698d2fcb6f69222c353b7f5c53a32944b367c1d16329189f0a521dfd0f4b ChangeLog 26976
 MISC metadata.xml 509 RMD160 39ae1f61046102dd264cc33c0f40cfe7e8e55792 SHA1 aa63afb7f246cd7b5081c3b448cebe4c0764c161 SHA256 2ab8a9c341e551c98695b765c4e1cff5b1e11a277e6a5cc03e8c4e272fdd3ab9
 MD5 ab0944e9348abcf04ea4a782274063cc metadata.xml 509
 RMD160 39ae1f61046102dd264cc33c0f40cfe7e8e55792 metadata.xml 509
@@ -34,3 +37,10 @@ SHA256 3c727680d9239506117208fd3a1927c3271a7cf3242ac93c170791995492f9bd files/di
 MD5 200265f42b8c0f15ecc6d975b1373d6c files/digest-xterm-223 220
 RMD160 13913332ad2ae19b778fc3aa9d32c0bbb08076d5 files/digest-xterm-223 220
 SHA256 d1c784ae7480ed406f7b003370e94a2dab456ad162ff5619c9079f4efe9a9513 files/digest-xterm-223 220
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.1 (GNU/Linux)
+
+iD8DBQFFxueE6Xxn2nLwtdQRAmeyAKDJ/FUThF5K0dtMqvEeADH8kA8ZmQCgub56
+ObVTjHZFwAyzV9WOXEDyWfo=
+=dOTs
+-----END PGP SIGNATURE-----
