@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.191 2006/12/06 21:14:55 kloeri Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.192 2007/02/05 08:15:30 eroyf Exp $
+
+  05 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> xterm-222.ebuild:
+  Stable on MIPS; bug #156741
 
   06 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> xterm-222.ebuild:
   Stable on Alpha.
